[package]
name = "bigraph"
description = "Different representations with implemented operations on bigraphs"
categories = ["data-structures", "mathematics", "science"]
keywords = ["bigraph", "graph", "bidirected", "abstract", "implementation"]
version = "2.0.0"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
homepage = "https://github.com/sebschmi/bigraph-rs"
documentation = "https://docs.rs/bigraph"
repository = "https://github.com/sebschmi/bigraph-rs"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traitgraph = "2.0.0"
opaque_typedef = "0.0.5"
opaque_typedef_macros = "0.0.5"
petgraph = "0.5.1"
num-traits = "0.2.14"
bitvector = "0.1.5"
