[package]
name = "bigraph"
description = "Different representations with implemented operations on bigraphs"
categories = ["data-structures", "mathematics", "science"]
keywords = ["bigraph", "graph", "bidirected", "abstract", "implementation"]
version = "4.0.0-alpha.5"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
homepage = "https://github.com/sebschmi/bigraph-rs"
documentation = "https://docs.rs/bigraph"
repository = "https://github.com/sebschmi/bigraph-rs"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traitgraph = "4.0.0-alpha.6"
traitgraph-algo = "7.0.0-alpha.5"
bitvector = "0.1.5"
